<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/viewA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageCapa"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:src="@drawable/capa" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="#ebebeb"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/capa"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btn_compras"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="16dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:onClick="mainMenuOnClick"
                                android:scaleType="fitCenter"
                                android:src="@drawable/menu_ir_as_compras" />

                            <TextView
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/menu_purchase"
                                android:textAlignment="center" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btn_listas"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/menu_listas"
                                android:clickable="true"
                                android:onClick="mainMenuOnClick" />

                            <TextView
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/menu_list"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btn_mercados"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/menu_mercados"
                                android:clickable="true"
                                android:onClick="mainMenuOnClick" />

                            <TextView
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/menu_supermarket"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btn_produtos"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/menu_produtos"
                                android:clickable="true"
                                android:onClick="mainMenuOnClick" />

                            <TextView
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/menu_product"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btn_historico"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/menu_historico"
                                android:clickable="true"
                                android:onClick="mainMenuOnClick" />

                            <TextView
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:text="@string/menu_history"
                                android:textAlignment="center" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/new_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/fav_oval"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            android:tint="#fff"
            app:layout_anchor="@id/viewA"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>